--- a/PaginaInicioSesion/css/estilos.css
+++ b/PaginaInicioSesion/css/estilos.css
@@ -7,6 +7,10 @@ body h1{
     justify-content: center;
     color: #7C151C;
 }
+
+h1{
+text-decoration:none;
+}
 .container {
 	max-width: 450px;
 	height: auto;
